# industrial-alarm-panel

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
custom_components/industrial_alarm_panel/: __init__.py  alarm_engine.py  alarm_models.py  alarm_panel.py  alarm_rules.py  alarm_sound.py  alarm_store.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_base.py  frontend_events.py  manifest.json  number.py  options_flow.py  repairs.py  rule_management.py  rule_suggestions.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  websocket_api.py
custom_components/industrial_alarm_panel/frontend/src/: api.ts  industrial-alarm-panel.ts  styles.ts
custom_components/industrial_alarm_panel/frontend/src/components/: alarm-config.ts  (+5 more)
custom_components/industrial_alarm_panel/translations/: en.json
docs/superpowers/plans/: 2026-05-17-rule-preview-and-bulk-cleanup.md
docs/superpowers/specs/: 2026-05-17-rule-preview-and-bulk-cleanup-design.md
tests/: conftest.py  test_alarm_engine.py  test_alarm_lifecycle.py  test_alarm_models.py  test_alarm_store.py  test_config_flow.py  test_entities.py  test_frontend_events.py  test_options_flow.py  test_rule_management.py  test_rule_suggestions.py  test_services.py  test_sound.py  test_static_ha_compat.py
